// $Id: CHANGELOG.txt,v 1.176.2.9 2010/10/03 15:15:48 alexb Exp $

Feeds 7.x 2.0 XXXXXXXXXXXXXXXXXXX
---------------------------------

- #927892 alex_b: Add "Process in background" feature. Allows one-off imports to
  be processed in the background rather than using Batch API. Useful for very
  large imports.
- #929058 alex_b: Report status of source on import and delete forms, track
  last updated time on a source level.
- #928836: Set progress floating point directly. Note: fetchers and parsers
  must use $state->progress() for setting the batch progress now IF they support
  batching.
- #928728: Track source states by stage, not by plugin. Note: call signature of
  FeedsSource::state() has changed.
- Remove 6.x upgrade hooks.
- #923318: Fix Fatal error: Call to a member function import() on a non-object
  occuring on cron.
- Clean up basic settings form.
- Make getConfig() include configuration defaults.

Feeds 7.x 2.0 Alpha 1, 2010-09-29
---------------------------------

- #925842 alex_b: Support batching through directories on disk.
- #625196 mstrelan, alex_b: Fix array_merge(), array_intersect_key() warnings.
- Remove hidden setting feeds_worker_time. Use hook_cron_queue_info_alter() to
  modify this setting.
- #744660-80 alex_b: Expand batch support to fetchers and parsers.
 - Removed FeedsBatch classes in favor of FeedsResult classes.
 - Variable 'feeds_node_batch_size' is now called 'feeds_process_limit'.
 - Signature of FeedsParser::getSourceElement() changed.
 - Signature of FeedsProcessor::uniqueTargets() changed.
 - Signature of FeedsProcessor::existingItemId() changed.
 - Sigature for callbacks registered by hook_feeds_parser_sources_alter()
   changed.
 - Return value of FeedsFetcher::fetch() changed.
 - Signature and return value of FeedsParser::parse() changed.
 - Signature of FeedsProcessor::process() changed.
 - Signature of hook_feeds_after_parse() changed.
 - Signature of hook_feeds_after_import() changed.