@@ -1,8 +1,10 @@
-// $Id: CHANGELOG.txt,v 1.176.2.9 2010/10/03 15:15:48 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.176.2.10 2010/10/03 15:49:34 alexb Exp $
 
 Feeds 7.x 2.0 XXXXXXXXXXXXXXXXXXX
 ---------------------------------
 
+- #930018 alex_b: Don't show file upload when 'Supply path directly' is
+  selected.
 - #927892 alex_b: Add "Process in background" feature. Allows one-off imports to
   be processed in the background rather than using Batch API. Useful for very
   large imports.
